# Fridge-Nest

./: .gitignore  Fridge Nestcode-workspace.code-workspace  README.md  pyproject.toml
mobile/: app.json  package-lock.json  package.json
model/: pyproject.toml
model/data/coco/project-1-at-2024-09-15-01-58-839140c6/: result.json
model/src/: annotate_data.ipynb  classify_food_yolo.ipynb  detr_resnet_50.py  download_images.py  finetune_detr.ipynb  finetune_detr.py  finetune_detr_resnet_50.ipynb  grounding_dino.ipynb  predict_detr_resnet_50.py  train_valid_coco_dataset.py
src/: download_images.py  infer.py  train.py
