[tool.poetry]
name = "fridge nest"
version = "0.1.0"
description = ""
authors = ["Steven Sung <sysung98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = {git = "https://github.com/THU-MIG/yolov10.git"}
huggingface = "^0.0.1"
huggingface-hub = "^0.24.6"
safetensors = "^0.4.5"
transformers = "^4.44.2"
duckduckgo-search = "^6.2.11"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
